@@ -1,0 +1,54 @@
+//C++ header - Open Scene Graph - Copyright (C) 1998-2001 Robert Osfield
+//Distributed under the terms of the GNU Library General Public License (LGPL)
+//as published by the Free Software Foundation.
+
+#ifndef OSG_COLLECTOCCLUDERSVISITOR
+#define OSG_COLLECTOCCLUDERSVISITOR 1
+
+#include <osg/NodeVisitor>
+#include <osg/CullStack>
+
+namespace osg {
+
+class SG_EXPORT CollectOccludersVisitor : public osg::NodeVisitor, public osg::CullStack
+{
+    public:
+
+
+        CollectOccludersVisitor();
+        virtual ~CollectOccludersVisitor();
+
+        virtual CollectOccludersVisitor* cloneType() const { return new CollectOccludersVisitor(); }
+
+        virtual void reset();
+
+        virtual void apply(osg::Node&);
+        virtual void apply(osg::Transform& node);
+        virtual void apply(osg::Projection& node);
+
+        virtual void apply(osg::Switch& node);
+        virtual void apply(osg::LOD& node);
+        virtual void apply(osg::OccluderNode& node);
+
+        typedef std::vector<ShadowVolumeOccluder> OccluderList;
+
+        OccluderList& getOccluderList() { return _occluderList; }
+        const OccluderList& getOccluderList() const { return _occluderList; }
+
+
+    protected:
+
+        /** prevent unwanted copy construction.*/
+        CollectOccludersVisitor(const CollectOccludersVisitor&):osg::NodeVisitor(),osg::CullStack() {}
+
+        /** prevent unwanted copy operator.*/
+        CollectOccludersVisitor& operator = (const CollectOccludersVisitor&) { return *this; }
+        
+        OccluderList _occluderList;
+
+};
+
+}
+
+#endif
+
